# URL-Shortener

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
PE/: events.csv  urls.csv  users.csv
app/: __init__.py  csv_parse.py  database.py  prom_metrics.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  api.py
docs/: CAPACITY.md  DECISIONS.md  DEPLOY.md  RUNBOOKS.md  TROUBLESHOOTING.md
loadtests/: BASELINE_AUTO.md  locustfile.py
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: app.json
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: load_pe_seed.py  record_load_baseline.py
tests/: test_api_integration.py  test_csv_parse.py  test_health.py
